feat(theme): add `changelog` and improve `contributors`, close #319 (#329)

--- a/theme/src/client/styles/content.css
+++ b/theme/src/client/styles/content.css
@@ -339,3 +339,8 @@
   color: currentcolor;
   content: "";
 }
+
+.vp-doc a[href*="://"]:has(img:only-child)::after,
+.vp-doc a[target=_blank]:has(img:only-child)::after {
+  display: none;
+}
